# neat_tnp

./: .gitignore  README.md  build_wheels.sh  examples.ipynb  pyproject.toml
.github/workflows/: wheels.yml
crates/neat_core_rs/: Cargo.toml
crates/neat_core_rs/src/: lib.rs
crates/neat_rs_core/: Cargo.toml
crates/neat_rs_core/src/: lib.rs
crates/neat_rs_tnp_rs/: Cargo.toml
crates/neat_rs_tnp_rs/src/: lib.rs
crates/neatwork_lib/: Cargo.toml
crates/neatwork_lib/src/: lib.rs
neat_tnp/: __init__.py  config_utils.py  dem_utils.py  neat_py_core.py  neat_py_neat.py  neat_py_tnp.py  neat_py_tnp_eval.py  neat_rs_tnp.py  plotting.py
neatwork/: __init__.py  neat.py  neat_core_py.py  neatwork_py.py  neatwork_py_eval.py  neatwork_rs.py  types.py
neatwork/utils/: __init__.py  dem.py  plotting.py
