[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "neatwork"
version = "0.2.0"
description = "Track Network Planning using NEAT-based Evolution of Graphs"
# readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "Leon Thomm", email = "thomm@jpl.nasa.gov"},
    {name = "Ethan Schaler", email = "ethan.w.schaler@jpl.nasa.gov"}
]
keywords = ["optimization", "genetic-algorithm", "NEAT", "graph-evolution", "network-planning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

dependencies = [
    "numpy>=1.20",
    "networkx>=2.6",
    "pydantic",
    "scikit-image>=0.19",  # needed for skimage.draw.line_nd and skimage.transform.resize
    "rasterio>=1.3",
    "matplotlib>=3.5",
    "seaborn",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ipykernel",
    "ipympl",
    "pytest",
    "networkx",
    "scikit-image",
    "tqdm",
    "optuna",
    "optuna-integration",
    "optuna-dashboard",
    "plotly",
    "wandb",
]

[project.urls]
Homepage = "https://github.com/nasa-jpl/neatwork/"
Repository = "https://github.com/nasa-jpl/neatwork/"

[tool.maturin]
module-name = "neatwork.neatwork_lib"
manifest-path = "crates/neatwork_lib/Cargo.toml"
# Include Python source files
python-source = "."
# Tell maturin to build a mixed Python/Rust package
# include = ["./*.py", "crates/**/*"]
