[package]
name = "neat_rs_tnp_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "neat_rs_tnp_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
neat_rs_core = { path = "../neat_rs_core" }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
fnv = "1.0"
numpy = "0.23"
ndarray = "0.16"
serde = { version = "1.0", features = ["derive"] }
pythonize = "0.23"