[package]
name = "neatwork_lib"
version = "0.2.0"
edition = "2021"

[lib]
name = "neatwork_lib"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
neat_core_rs = { path = "../neat_core_rs" }
rand = "0.8"
rand_distr = "0.4"
rayon = "1.10"
fnv = "1.0"
numpy = "0.23"
ndarray = "0.16"
serde = { version = "1.0", features = ["derive"] }
pythonize = "0.23"